# lung_nodule_detection

./: .env  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/app/: backend_pre_start.py  crud.py  detector.py  initial_data.py  main.py  models.py  utils.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 3c09c51de3ad_create_account_table.py  63a95ebcac54_create_users_table.py  ff45fde64228_create_tables.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: detection.py  login.py  users.py
backend/app/core/: config.py  db.py  security.py
backend/scripts/: prestart.sh
frontend/: package.json
frontend/src/: App.jsx  api.js
frontend/src/components/: navbar.jsx
frontend/src/pages/: detection.jsx  history.jsx  login.jsx  recover-password.jsx  reset-password.jsx  signup.jsx
